# BarmenAI

./: .gitignore  README.md  cocktail_script.py  paths.py  pyproject.toml
backend/: app.py
backend/agent/: config.py
backend/core/: settings.py
backend/db/: connection.py  embedding.py
backend/models/: query.py
backend/routers/: query.py
backend/services/: langchain_prompt.py  llm_service.py  tools.py
frontend/: main.py
